--- a/src/components/Row/styles/row.css
+++ b/src/components/Row/styles/row.css
@@ -41,28 +41,83 @@
 }
 
 .row .movieRow .movie {
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: cover !important;
+     object-fit: cover !important;
+  max-height: 250px !important;
+  max-width: 165px !important;
   -webkit-animation: skeleton 1s ease-in-out infinite alternate;
           animation: skeleton 1s ease-in-out infinite alternate;
   -webkit-transition: 0.5s ease-in-out !important;
   transition: 0.5s ease-in-out !important;
   position: relative;
-  max-height: 250px;
-  object-fit: cover;
 }
 
-.row .movieRow .movie .overlay {
-  opacity: 0;
-  padding: 1.5em;
-  z-index: 1;
-  font-size: 0.75em;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+.row .movieRow .movie:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.08);
+          transform: scale(1.08);
+}
+
+.row .movieRow .movie:hover .overlay {
+  opacity: 1 !important;
+  padding: 1.5em !important;
+  height: 100% !important;
+}
+
+.row .movieRow .movie:hover .overlay h2 {
+  text-align: left !important;
+}
+
+.row .movieRow .movie:hover .overlay .data {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
+.row .movieRow .movie:hover .overlay .movieDescription {
+  opacity: 1 !important;
+}
+
+.row .movieRow .skeleton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-height: 250px !important;
+  max-width: 165px !important;
   width: 100%;
+  color: white;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  -webkit-animation: skeleton 1s ease-in-out;
+          animation: skeleton 1s ease-in-out;
+}
+
+.row .movieRow .skeleton .icon {
+  height: 50px;
+  width: auto;
+}
+
+.overlay {
+  height: 20%;
+  opacity: 1;
+  z-index: 1;
+  padding: 0.5em 1.5em 0.5em;
+  font-size: 0.75em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0 auto;
+  -o-object-fit: cover !important;
+     object-fit: cover !important;
+  max-height: 250px !important;
+  max-width: 165px !important;
+  width: 100% !important;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,7 +139,28 @@
   transition: var(--transition);
 }
 
-.row .movieRow .movie .overlay .titleData {
+.overlay i {
+  font-size: 0.8em;
+  color: var(--main);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.overlay h2 {
+  width: 100%;
+  font-size: 1.1em;
+  text-align: left;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.overlay .movieDescription {
+  opacity: 0;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.overlay .titleData {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -96,12 +172,12 @@
       -ms-flex-align: center;
           align-items: center;
   grid-gap: 0.5em;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
 }
 
-.row .movieRow .movie .overlay .titleData .data {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.overlay .titleData .data {
+  display: none;
   width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -114,9 +190,13 @@
       -ms-flex-align: end;
           align-items: flex-end;
   text-align: right;
+  -webkit-animation: fadeIn 100ms ease-in-out;
+          animation: fadeIn 100ms ease-in-out;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
 }
 
-.row .movieRow .movie .overlay .titleData .data span {
+.overlay .titleData .data span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,51 +209,8 @@
           justify-content: flex-end;
   text-align: right;
   font-size: 0.85em;
-}
-
-.row .movieRow .movie .overlay .titleData .data span i {
-  font-size: 0.8em;
-  color: var(--main);
-}
-
-.row .movieRow .movie .overlay h2 {
-  text-align: left;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.row .movieRow .movie:hover {
-  cursor: pointer;
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-}
-
-.row .movieRow .movie:hover .overlay {
-  opacity: 1;
-}
-
-.row .movieRow .skeleton {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  max-height: 250px;
-  width: 100%;
-  color: white;
-  -webkit-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
-  -webkit-animation: skeleton 1s ease-in-out;
-          animation: skeleton 1s ease-in-out;
-}
-
-.row .movieRow .skeleton .icon {
-  height: 50px;
-  width: auto;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
 }
 
 @-webkit-keyframes skeleton {
