--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -72,6 +72,31 @@ body {
   animation: fadeIn 1000ms ease-in-out;
 }
 
+main {
+  margin-top: 0em;
+  z-index: 15;
+  min-height: 96vh;
+  animation: fadeIn 1000ms ease-in-out;
+  margin-top: 0em;
+  z-index: 15;
+  min-height: 96vh;
+  animation: fadeIn 1000ms ease-in-out;
+  width: 100%;
+  padding: 5em 0;
+  text-shadow: 0 1px 2px black;
+  background-size: contain !important;
+  background-repeat: repeat-y !important;
+  background: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.8) 100%,
+      rgba(0, 0, 0, 0) 55%,
+      var(--authGlass) 5%,
+      rgba(0, 0, 0, 0.8) 100%
+    ),
+    url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg");
+  transition: var(--transition);
+}
+
 .content {
   color: white;
   font-family: "montserrat";
@@ -88,7 +113,7 @@ body {
     background-repeat: repeat-y !important;
     background: linear-gradient(
         to top,
-        rgba(0, 0, 0, 0.8) 0,
+        rgba(0, 0, 0, 0.8) 100%,
         rgba(0, 0, 0, 0) 55%,
         var(--authGlass) 5%,
         rgba(0, 0, 0, 0.8) 100%
@@ -177,13 +202,6 @@ body {
   100% {
     opacity: 1;
   }
-}
-
-main {
-  margin-top: 0em;
-  z-index: 15;
-  min-height: 96vh;
-  animation: fadeIn 1000ms ease-in-out;
 }
 
 button {
