--- a/src/components/Banner/styles/banner.scss
+++ b/src/components/Banner/styles/banner.scss
@@ -64,29 +64,31 @@
         width: 100%;
       }
     }
-    .bannerButtons {
-      display: flex;
-      grid-gap: 1em;
-      button {
-        cursor: pointer;
-        border: none;
-        outline: none;
-        font-weight: 500;
-        border-radius: 0.3vw;
-        padding: 0.5rem 2rem 0.5rem 2rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        grid-gap: 0.5em;
-        font-size: 1em;
-        color: black;
-        background: #f2f2f2;
-        transition: var(--transition);
-        &:hover {
-          color: white;
-          background: var(--bg);
-        }
-      }
+  }
+}
+
+.bannerButtons {
+  display: flex;
+  grid-gap: 1em;
+  transition: var(--transition);
+  button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    border-radius: 0.3vw;
+    padding: 0.5rem 2rem 0.5rem 2rem;
+    display: flex !important;
+    justify-content: center;
+    align-items: center !important;
+    grid-gap: 0.5em;
+    font-size: 1em;
+    color: black;
+    background: #f2f2f2;
+    transition: var(--transition);
+    &:hover {
+      color: white;
+      background: var(--bg);
     }
   }
 }
