--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -27,27 +27,60 @@
       width: 100%;
     }
     .movie {
+      cursor: pointer;
+      position: relative;
       object-fit: cover !important;
       max-height: 250px !important;
       max-width: 165px !important;
       animation: skeleton 1s ease-in-out infinite alternate;
       transition: 0.5s ease-in-out !important;
-      position: relative;
+      .bannerButtons {
+        opacity: 0;
+        background: var(--authGlass);
+        padding: 0.75em 1em !important;
+        grid-gap: 0.5em !important;
+        backdrop-filter: blur(2px);
+        margin: 0 auto !important;
+        height: 35px !important;
+        justify-content: center;
+        width: 100% !important;
+        bottom: 9px !important;
+        right: 0 !important;
+        position: absolute;
+        left: 0 !important;
+        button {
+          font-size: 0.8em;
+          font-weight: 600;
+          max-height: 30px;
+          padding: 0 !important;
+        }
+      }
+
+      // Hover Movie
       &:hover {
-        cursor: pointer;
         transform: scale(1.08);
         .overlay {
           opacity: 1 !important;
           padding: 1.5em !important;
+          object-fit: cover !important;
           height: 100% !important;
-          h2 {
-            text-align: left !important;
-          }
-          .data {
-            display: flex !important;
+          .titleData {
+            transform: scale(0.92) !important;
+            clip-path: none !important;
+            padding: 1em 0 !important;
+            max-height: none !important;
+            .movieIcon {
+              opacity: 0 !important;
+              display: none !important;
+            }
           }
           .movieDescription {
+            transform: scale(0.92) !important;
             opacity: 1 !important;
+          }
+          .bannerButtons {
+            transform: scale(0.99) !important;
+            opacity: 1;
           }
         }
       }
@@ -74,7 +107,7 @@
   height: 20%;
   opacity: 1;
   z-index: 1;
-  padding: 0.5em 1.5em 0.5em;
+  padding: 1em 1.5em;
   font-size: 0.75em;
   position: absolute;
   bottom: 0;
@@ -92,6 +125,12 @@
   background: var(--blackGlass);
   backdrop-filter: blur(5px);
   transition: var(--transition);
+  .movieIcon {
+    opacity: 1;
+    display: inline-block;
+    animation: fadeIn var(--transition);
+    transition: var(--transition);
+  }
   i {
     font-size: 0.8em;
     color: var(--main);
@@ -100,25 +139,30 @@
   h2 {
     width: 100%;
     font-size: 1.1em;
+    margin: 0 !important;
+    padding: 0 !important;
     text-align: left;
     transition: var(--transition);
   }
   .movieDescription {
     opacity: 0;
+    animation: fadeIn var(--transition);
     transition: var(--transition);
   }
   .titleData {
     display: flex;
     width: 100%;
-    justify-content: space-between;
     align-items: center;
+    max-height: 30px;
+    justify-content: space-between;
     grid-gap: 0.5em;
+    // clip-path: polygon(105% 0%, 105% 30px, 0% 30px, 0% 0%);
     transition: var(--transition);
     .data {
-      display: none;
-      width: 100%;
+      height: 100%;
       flex-direction: column;
-      justify-content: flex-end;
+      display: flex;
+      justify-content: space-between;
       align-items: flex-end;
       text-align: right;
       animation: fadeIn 100ms ease-in-out;
