--- a/src/components/Row/styles/row.css
+++ b/src/components/Row/styles/row.css
@@ -4,11 +4,17 @@
   padding: 1em 1em 1em 8em;
 }
 
+.row h2 {
+  text-align: left;
+  font-weight: 500;
+  font-size: 1.3em;
+}
+
 .row:last-child {
   margin-bottom: 3em;
 }
 
-.row h2 {
+.row .rowTitle {
   text-align: left;
   font-weight: 500;
   font-size: 1.3em;
@@ -38,268 +44,5 @@
 
 .row .movieRow span {
   width: 100%;
-}
-
-.row .movieRow .movie {
-  cursor: pointer;
-  position: relative;
-  -o-object-fit: cover !important;
-     object-fit: cover !important;
-  max-height: 250px !important;
-  max-width: 165px !important;
-  -webkit-animation: skeleton 1s ease-in-out infinite alternate;
-          animation: skeleton 1s ease-in-out infinite alternate;
-  -webkit-transition: 0.5s ease-in-out !important;
-  transition: 0.5s ease-in-out !important;
-}
-
-.row .movieRow .movie .bannerButtons {
-  opacity: 0;
-  background: var(--authGlass);
-  padding: 0.75em 1em !important;
-  grid-gap: 0.5em !important;
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
-  margin: 0 auto !important;
-  height: 35px !important;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100% !important;
-  bottom: 9px !important;
-  right: 0 !important;
-  position: absolute;
-  left: 0 !important;
-}
-
-.row .movieRow .movie .bannerButtons button {
-  font-size: 0.8em;
-  font-weight: 600;
-  max-height: 30px;
-  padding: 0 !important;
-}
-
-.row .movieRow .movie:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-}
-
-.row .movieRow .movie:hover .overlay {
-  opacity: 1 !important;
-  padding: 1.5em !important;
-  -o-object-fit: cover !important;
-     object-fit: cover !important;
-  height: 100% !important;
-}
-
-.row .movieRow .movie:hover .overlay .titleData {
-  -webkit-transform: scale(0.92) !important;
-          transform: scale(0.92) !important;
-  -webkit-clip-path: none !important;
-          clip-path: none !important;
-  padding: 1em 0 !important;
-  max-height: none !important;
-}
-
-.row .movieRow .movie:hover .overlay .titleData .movieIcon {
-  opacity: 0 !important;
-  display: none !important;
-}
-
-.row .movieRow .movie:hover .overlay .movieDescription {
-  -webkit-transform: scale(0.92) !important;
-          transform: scale(0.92) !important;
-  opacity: 1 !important;
-}
-
-.row .movieRow .movie:hover .overlay .bannerButtons {
-  -webkit-transform: scale(0.99) !important;
-          transform: scale(0.99) !important;
-  opacity: 1;
-}
-
-.row .movieRow .skeleton {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  max-height: 250px !important;
-  max-width: 165px !important;
-  width: 100%;
-  color: white;
-  -webkit-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
-  -webkit-animation: skeleton 1s ease-in-out;
-          animation: skeleton 1s ease-in-out;
-}
-
-.row .movieRow .skeleton .icon {
-  height: 50px;
-  width: auto;
-}
-
-.overlay {
-  height: 20%;
-  opacity: 1;
-  z-index: 1;
-  padding: 1em 1.5em;
-  font-size: 0.75em;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  margin: 0 auto;
-  -o-object-fit: cover !important;
-     object-fit: cover !important;
-  max-height: 250px !important;
-  max-width: 165px !important;
-  width: 100% !important;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  text-align: left !important;
-  background: var(--blackGlass);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.overlay .movieIcon {
-  opacity: 1;
-  display: inline-block;
-  -webkit-animation: fadeIn var(--transition);
-          animation: fadeIn var(--transition);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.overlay i {
-  font-size: 0.8em;
-  color: var(--main);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.overlay h2 {
-  width: 100%;
-  font-size: 1.1em;
-  margin: 0 !important;
-  padding: 0 !important;
-  text-align: left;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.overlay .movieDescription {
-  opacity: 0;
-  -webkit-animation: fadeIn var(--transition);
-          animation: fadeIn var(--transition);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.overlay .titleData {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  max-height: 30px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  grid-gap: 0.5em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.overlay .titleData .data {
-  height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  text-align: right;
-  -webkit-animation: fadeIn 100ms ease-in-out;
-          animation: fadeIn 100ms ease-in-out;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.overlay .titleData .data span {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  grid-gap: 0.5em;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  text-align: right;
-  font-size: 0.85em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-@-webkit-keyframes skeleton {
-  0% {
-    background: var(--secondary);
-    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
-            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
-  }
-  70% {
-    -webkit-box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
-            box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
-  }
-  100% {
-    background: var(--bg);
-    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
-            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
-  }
-}
-
-@keyframes skeleton {
-  0% {
-    background: var(--secondary);
-    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
-            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
-  }
-  70% {
-    -webkit-box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
-            box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
-  }
-  100% {
-    background: var(--bg);
-    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
-            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
-  }
 }
 /*# sourceMappingURL=row.css.map */
