--- a/src/components/Banner/styles/banner.scss
+++ b/src/components/Banner/styles/banner.scss
@@ -10,7 +10,22 @@
   justify-content: center;
   align-items: center;
   text-shadow: 0 1px 2px black;
+  animation: fadeIn 1000ms ease-in-out !important;
   transition: var(--transition);
+  span.blur {
+    position: absolute;
+    width: 100% !important;
+    height: 100% !important;
+    top: 0;
+    left: 0;
+  }
+  .bannerImage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
   .innerBanner {
     display: flex;
     flex-direction: column;
@@ -83,18 +98,19 @@
     align-items: center !important;
     grid-gap: 0.5em;
     font-size: 1em;
-    color: black;
-    background: #f2f2f2;
+    color: white;
+    background: var(--bg);
+    text-transform: uppercase;
     transition: var(--transition);
     &:hover {
-      color: white;
-      background: var(--bg);
+      color: black;
+      background: #f2f2f2;
     }
   }
 }
 
 .animatedBanner {
-  animation: backgroundMove 10s ease-in-out infinite alternate,
+  animation: backgroundMove 5s ease-in-out infinite alternate,
     fadeIn 1000ms ease-in-out !important;
 }
 
@@ -103,7 +119,6 @@
   background-position: 50% 15%;
   background-size: cover;
   position: relative;
-  animation: fadeIn 1000ms ease-in-out !important;
   transition: var(--transition);
   &::before {
     content: "";
