--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -52,37 +52,6 @@ header .inner .navigation {
   display: flex;
 }
 
-header .inner .navigation ul.right {
-  grid-gap: 0.325em;
-}
-
-header .inner .navigation ul.right .list {
-  position: relative !important;
-}
-
-header .inner .navigation ul.right .list .listItems {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  background: rgba(255, 0, 0, 0.5);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-family: montserrat;
-  font-weight: 500;
-  font-size: 0.69em;
-  width: 19.5px;
-  height: 19.5px;
-  padding: 0.5em;
-  border-radius: 100%;
-}
-
 header .inner .navigation ul {
   margin: 0;
   padding: 0;
@@ -100,11 +69,14 @@ header .inner .navigation ul {
 header .inner .navigation ul .iconButton {
   color: white;
   font-size: 1.2em;
-  font-weight: 300 !important;
-  padding: 0 !important;
+  font-weight: 500 !important;
   margin: 0 !important;
-  width: 35px !important;
-  height: 35px !important;
+  width: 20px !important;
+  height: 20px !important;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background: var(--authGlass);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -118,25 +90,38 @@ header .inner .navigation ul .iconButton {
   min-width: 0;
   -webkit-backdrop-filter: blur(3px);
           backdrop-filter: blur(3px);
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
+}
+
+header .inner .navigation ul .iconButton .modalButton {
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+  min-width: 20px !important;
+}
+
+header .inner .navigation ul .iconButton .buttonText {
+  display: none;
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 
-header .inner .navigation ul .iconButton i {
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
+header .inner .navigation ul .iconButton .listIcon {
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
 }
 
-header .inner .navigation ul .iconButton i span {
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
+header .inner .navigation ul .iconButton .listIcon .indexCircle {
+  -webkit-transition: var(--transition) !important;
+  transition: var(--transition) !important;
 }
 
 header .inner .navigation ul .iconButton:hover {
   background: var(--mainGlass);
 }
 
-header .inner .navigation ul .iconButton:hover i span {
+header .inner .navigation ul .iconButton:hover .listIcon .indexCircle {
+  color: var(--main);
   background: var(--secondary) !important;
 }
 
@@ -300,105 +285,7 @@ header .inner .user:hover .caret i {
           backdrop-filter: blur(5px);
 }
 
-.MuiBackdrop-root {
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-  background: var(--blackGlass) !important;
-}
-
-.listOfMovies {
-  color: var(--silver);
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 69% !important;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard {
-  padding: 3em;
-  background: var(--blackGlass);
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-  border-radius: 7px;
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100% !important;
-  margin: 0 auto;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard .userNameColumn {
-  margin-bottom: 0.5em;
-  border-bottom: 3px solid var(--main);
-  display: inline-block;
-  padding: 0.5em 0.5em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard .userNameColumn:hover {
-  color: white;
-}
-
-.listOfMovies .dashboard .dashboardRow {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0.3em 0.5em;
-  font-size: 0.55em;
-  width: 100% !important;
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  grid-gap: 0.4em;
-  cursor: pointer;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard .dashboardRow .titleField {
-  text-align: left !important;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  grid-gap: 0.35em;
-  padding: 0.35em;
-  width: 100% !important;
-  font-size: 0.85em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard .dashboardRow .titleField i {
-  color: var(--mainGlass);
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard .dashboardRow .titleField .index {
-  font-weight: 800;
-  color: var(--bg);
-  background: var(--mainGlass);
-  border-radius: 100px;
-  height: 20px;
-  width: 20px;
+.customAvatar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -408,50 +295,15 @@ header .inner .user:hover .caret i {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard .dashboardRow:hover {
-  color: white !important;
-}
-
-.listOfMovies .dashboard .dashboardRow:hover span i {
-  color: var(--main) !important;
-}
-
-.listOfMovies .dashboard .dashboardRow:hover span .index {
+  width: 35px;
+  height: 35px;
+  border-radius: 7px;
+  font-size: 18px;
+  margin: 0 auto;
   background: var(--main);
-  color: white !important;
-  font-weight: 700;
-}
-
-.listOfMovies .dashboard .dashboardRow:hover span:hover i {
-  color: var(--main) !important;
-}
-
-.listOfMovies .dashboard .dashboardTitleInnerRow {
-  font-size: 1em;
-  grid-gap: 0;
-  padding: 0em;
-  margin-bottom: 0.5em;
+  cursor: pointer;
+  margin-left: 20px;
   -webkit-transition: var(--transition);
   transition: var(--transition);
-}
-
-.listOfMovies .dashboard .dashboardTitleInnerRow div {
-  border-bottom: 3px solid var(--main);
-  padding-bottom: 0.5em;
-  margin-bottom: 0.5em;
-  -webkit-transition: var(--transition);
-  transition: var(--transition);
-}
-
-.listOfMovies .dashboard .dashboardTitleInnerRow div:hover {
-  color: white !important;
-}
-
-.listOfMovies .dashboard .dashboardTitleInnerRow:hover {
-  color: var(--silver) !important;
 }
 /*# sourceMappingURL=header.css.map */
