--- a/src/components/Header/styles/header.scss
+++ b/src/components/Header/styles/header.scss
@@ -25,28 +25,6 @@ header {
     }
     .navigation {
       display: flex;
-      ul.right {
-        grid-gap: 0.325em;
-        .list {
-          position: relative !important;
-          .listItems {
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            background: rgba(255, 0, 0, 0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: montserrat;
-            font-weight: 500;
-            font-size: 0.69em;
-            width: 19.5px;
-            height: 19.5px;
-            padding: 0.5em;
-            border-radius: 100%;
-          }
-        }
-      }
       ul {
         margin: 0;
         padding: 0;
@@ -57,27 +35,36 @@ header {
         .iconButton {
           color: white;
           font-size: 1.2em;
-          font-weight: 300 !important;
-          padding: 0 !important;
+          font-weight: 500 !important;
           margin: 0 !important;
-          width: 35px !important;
-          height: 35px !important;
+          width: 20px !important;
+          height: 20px !important;
+          flex-direction: column;
           background: var(--authGlass);
           display: flex;
           justify-content: center;
           align-items: center;
           min-width: 0;
           backdrop-filter: blur(3px);
-          transition: var(--transition);
-          i {
+          transition: var(--transition) !important;
+          .modalButton {
             transition: var(--transition);
-            span {
-              transition: var(--transition);
+            min-width: 20px !important;
+          }
+          .buttonText {
+            display: none;
+            transition: var(--transition);
+          }
+          .listIcon {
+            transition: var(--transition) !important;
+            .indexCircle {
+              transition: var(--transition) !important;
             }
           }
           &:hover {
-            i {
-              span {
+            .listIcon {
+              .indexCircle {
+                color: var(--main);
                 background: var(--secondary) !important;
               }
             }
@@ -198,110 +185,17 @@ header {
   backdrop-filter: blur(5px);
 }
 
-.MuiBackdrop-root {
-  backdrop-filter: blur(5px);
+.customAvatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 7px;
+  font-size: 18px;
+  margin: 0 auto;
+  background: var(--main);
+  cursor: pointer;
+  margin-left: 20px;
   transition: var(--transition);
-  background: var(--blackGlass) !important;
-}
-
-.listOfMovies {
-  color: var(--silver);
-  display: flex !important;
-  flex-direction: column;
-  width: 69% !important;
-  transition: var(--transition);
-  .dashboard {
-    padding: 3em;
-    background: var(--blackGlass);
-    backdrop-filter: blur(3px);
-    border-radius: 7px;
-    display: flex !important;
-    flex-direction: column;
-    width: 100% !important;
-    margin: 0 auto;
-    transition: var(--transition);
-    .userNameColumn {
-      margin-bottom: 0.5em;
-      border-bottom: 3px solid var(--main);
-      display: inline-block;
-      padding: 0.5em 0.5em;
-      transition: var(--transition);
-      &:hover {
-        color: white;
-      }
-    }
-    .dashboardRow {
-      justify-content: space-between;
-      padding: 0.3em 0.5em;
-      font-size: 0.55em;
-      width: 100% !important;
-      display: flex !important;
-      grid-gap: 0.4em;
-      cursor: pointer;
-      transition: var(--transition);
-      .titleField {
-        text-align: left !important;
-        display: flex;
-        align-items: center;
-        grid-gap: 0.35em;
-        padding: 0.35em;
-        width: 100% !important;
-        font-size: 0.85em;
-        transition: var(--transition);
-        i {
-          color: var(--mainGlass);
-          transition: var(--transition);
-        }
-        .index {
-          font-weight: 800;
-          color: var(--bg);
-          background: var(--mainGlass);
-          border-radius: 100px;
-          height: 20px;
-          width: 20px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          transition: var(--transition);
-        }
-      }
-      &:hover {
-        color: white !important;
-        span {
-          i {
-            color: var(--main) !important;
-          }
-          .index {
-            background: var(--main);
-            color: white !important;
-            font-weight: 700;
-          }
-          &:hover {
-            i {
-              color: var(--main) !important;
-            }
-          }
-        }
-      }
-    }
-    .dashboardTitleInnerRow {
-      font-size: 1em;
-      grid-gap: 0;
-      padding: 0em;
-      margin-bottom: 0.5em;
-      transition: var(--transition);
-      div {
-        border-bottom: 3px solid var(--main);
-        padding-bottom: 0.5em;
-        margin-bottom: 0.5em;
-        transition: var(--transition);
-        &:hover {
-          color: white !important;
-        }
-      }
-      &:hover {
-        color: var(--silver) !important;
-      }
-    }
-  }
 }
