--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -2,10 +2,15 @@
   color: white !important;
   font-family: montserrat;
   padding: 1em 1em 1em 8em;
+  h2 {
+    text-align: left;
+    font-weight: 500;
+    font-size: 1.3em;
+  }
   &:last-child {
     margin-bottom: 3em;
   }
-  h2 {
+  .rowTitle {
     text-align: left;
     font-weight: 500;
     font-size: 1.3em;
@@ -26,170 +31,5 @@
     span {
       width: 100%;
     }
-    .movie {
-      cursor: pointer;
-      position: relative;
-      object-fit: cover !important;
-      max-height: 250px !important;
-      max-width: 165px !important;
-      animation: skeleton 1s ease-in-out infinite alternate;
-      transition: 0.5s ease-in-out !important;
-      .bannerButtons {
-        opacity: 0;
-        background: var(--authGlass);
-        padding: 0.75em 1em !important;
-        grid-gap: 0.5em !important;
-        backdrop-filter: blur(2px);
-        margin: 0 auto !important;
-        height: 35px !important;
-        justify-content: center;
-        width: 100% !important;
-        bottom: 9px !important;
-        right: 0 !important;
-        position: absolute;
-        left: 0 !important;
-        button {
-          font-size: 0.8em;
-          font-weight: 600;
-          max-height: 30px;
-          padding: 0 !important;
-        }
-      }
-
-      // Hover Movie
-      &:hover {
-        transform: scale(1.08);
-        .overlay {
-          opacity: 1 !important;
-          padding: 1.5em !important;
-          object-fit: cover !important;
-          height: 100% !important;
-          .titleData {
-            transform: scale(0.92) !important;
-            clip-path: none !important;
-            padding: 1em 0 !important;
-            max-height: none !important;
-            .movieIcon {
-              opacity: 0 !important;
-              display: none !important;
-            }
-          }
-          .movieDescription {
-            transform: scale(0.92) !important;
-            opacity: 1 !important;
-          }
-          .bannerButtons {
-            transform: scale(0.99) !important;
-            opacity: 1;
-          }
-        }
-      }
-    }
-    .skeleton {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      max-height: 250px !important;
-      max-width: 165px !important;
-      width: 100%;
-      color: white;
-      transition: 0.5s ease-in-out;
-      animation: skeleton 1s ease-in-out;
-      .icon {
-        height: 50px;
-        width: auto;
-      }
-    }
-  }
-}
-
-.overlay {
-  height: 20%;
-  opacity: 1;
-  z-index: 1;
-  padding: 1em 1.5em;
-  font-size: 0.75em;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  margin: 0 auto;
-  object-fit: cover !important;
-  max-height: 250px !important;
-  max-width: 165px !important;
-  width: 100% !important;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  text-align: left !important;
-  background: var(--blackGlass);
-  backdrop-filter: blur(5px);
-  transition: var(--transition);
-  .movieIcon {
-    opacity: 1;
-    display: inline-block;
-    animation: fadeIn var(--transition);
-    transition: var(--transition);
-  }
-  i {
-    font-size: 0.8em;
-    color: var(--main);
-    transition: var(--transition);
-  }
-  h2 {
-    width: 100%;
-    font-size: 1.1em;
-    margin: 0 !important;
-    padding: 0 !important;
-    text-align: left;
-    transition: var(--transition);
-  }
-  .movieDescription {
-    opacity: 0;
-    animation: fadeIn var(--transition);
-    transition: var(--transition);
-  }
-  .titleData {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    max-height: 30px;
-    justify-content: space-between;
-    grid-gap: 0.5em;
-    // clip-path: polygon(105% 0%, 105% 30px, 0% 30px, 0% 0%);
-    transition: var(--transition);
-    .data {
-      height: 100%;
-      flex-direction: column;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      text-align: right;
-      animation: fadeIn 100ms ease-in-out;
-      transition: var(--transition);
-      span {
-        display: flex;
-        grid-gap: 0.5em;
-        align-items: center;
-        justify-content: flex-end;
-        text-align: right;
-        font-size: 0.85em;
-        transition: var(--transition);
-      }
-    }
-  }
-}
-
-@keyframes skeleton {
-  0% {
-    background: var(--secondary);
-    box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
-  }
-  70% {
-    box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
-  }
-  100% {
-    background: var(--bg);
-    box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
