--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -84,7 +84,7 @@ main {
   width: 100%;
   padding: 5em 0;
   text-shadow: 0 1px 2px black;
-  background-size: contain !important;
+  background-size: cover !important;
   background-repeat: repeat-y !important;
   background: linear-gradient(
       to top,
@@ -109,7 +109,7 @@ main {
     width: 100%;
     padding: 5em 0;
     text-shadow: 0 1px 2px black;
-    background-size: contain !important;
+    background-size: cover !important;
     background-repeat: repeat-y !important;
     background: linear-gradient(
         to top,
